--- a/FixedPoint-simple.cabal
+++ b/FixedPoint-simple.cabal
@@ -20,5 +20,6 @@ Cabal-version:       >=1.8
 Library
   Exposed-modules:     Data.FixedPoint
   Build-depends:       base >= 4 && < 5
+  ghc-options:         -O2 -funbox-strict-fields
   -- Other-modules:       
   -- Build-tools:         
