--- a/FixedPoint-simple.cabal
+++ b/FixedPoint-simple.cabal
@@ -1,5 +1,5 @@
 Name:                FixedPoint-simple
-Version:             0.4.2
+Version:             0.5
 Synopsis:            Fixed point, large word, and large int numerical representations (types and common class instances)
 Description:         This library uses elementary techniques to implement fixed point types in terms
                      of basic integrals such as Word64.  All mathematical operations are implemented
@@ -20,8 +20,8 @@ Homepage:       https://github.com/TomMD/FixedPoint
 
 
 Library
-  Exposed-modules:     Data.FixedPoint
-  Build-depends:       base >= 4 && < 5
+  Exposed-modules:     Data.FixedPoint, Data.FixedPoint.TH
+  Build-depends:       base >= 4 && < 5, deepseq, template-haskell >= 2.8
   ghc-options:         -O2 -funbox-strict-fields
   -- Other-modules:       
   -- Build-tools:         
